--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: 0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -69,3 +72,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  generate: true
