--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: 0.16.1
+  sqflite: 1.3.2+2
+  path_provider: 1.6.27
+  path: 1.8.0-nullsafety.1
 
 
   # The following adds the Cupertino Icons font to your application.
