--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   path_provider: 1.6.27
   path: 1.8.0-nullsafety.1
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -67,11 +66,20 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: RobotoMono
+    - family: CascadiaMonoPL
       fonts:
-        - asset: fonts/RobotoMono-Regular.ttf
-        - asset: fonts/RobotoMono-Bold.ttf
+        - asset: lib/fonts/CascadiaMonoPL-ExtraLight.ttf
+          weight: 100
+        - asset: lib/fonts/CascadiaMonoPL-Light.ttf
+          weight: 200
+        - asset: lib/fonts/CascadiaMonoPL-SemiLight.ttf
+          weight: 300
+        - asset: lib/fonts/CascadiaMonoPL-Regular.ttf
           weight: 400
+        - asset: lib/fonts/CascadiaMonoPL-SemiBold.ttf
+          weight: 500
+        - asset: lib/fonts/CascadiaMonoPL-Bold.ttf
+          weight: 800
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
