--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   sqflite: 1.3.2+2
   path_provider: 1.6.27
   path: 1.8.0-nullsafety.1
+  steps_indicator: 1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
