--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: 1.6.27
   path: 1.8.0-nullsafety.1
   steps_indicator: 1.1.0
+  flutter_speed_dial: 2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
